common/forgejo/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-public
  namespace: forgejo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: traefik-public-only@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: git.nokiy.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo
                port:
                  number: 3000
  tls:
  - hosts:
    - "git.nokiy.net"
    secretName: forgejo-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forgejo-tailscale
  namespace: forgejo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: traefik-tailscale-only@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: forgejo.i.nokiy.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forgejo
                port:
                  number: 3000
  tls:
  - hosts:
    - "forgejo.i.nokiy.net"
    secretName: forgejo-tailscale-tls
